I fixed overflow2

--- a/phone.css
+++ b/phone.css
@@ -1,4 +1,4 @@
-@media (max-width:478px) {
+@media screen and (max-width:478px) {
     html, body {
         overflow-x: hidden;
     }
@@ -26,8 +26,10 @@
         /* margin-left: 10px; */
         /* background-image: url(images/Venue-1-38edfbf0.png); */
         /* height: 80vh; */
-        background-size: cover;
+        background-size: contain;
+        background-repeat: no-repeat;
         /* max-width: 100%; */
+        /* height: 100%; */
         /* width: 100%; */
         
     }
